packages/flark_core/lib/src/native/bindings.dart


final class FlarkV4Bindings {
  FlarkV4Bindings.nativeAsset()
    : negotiate = _nativeNegotiate,
      createBegin = _nativeCreateBegin,
      createAppend = _nativeCreateAppend,
      createCommit = _nativeCreateCommit,
      pump = _nativePump,
      smallEdit = _nativeSmallEdit,
      editIntentV1 = _nativeEditIntentV1,
      sourceTransactionV1 = _nativeSourceTransactionV1,
      stagedSourceTransactionV1 = _nativeStagedSourceTransactionV1,
      bulkBegin = _nativeBulkBegin,
      bulkAppend = _nativeBulkAppend,
      bulkCommit = _nativeBulkCommit,
      bulkAbort = _nativeBulkAbort,
      coordinateConvert = _nativeCoordinateConvert,
      historyReplay = _nativeHistoryReplay,
      historyRelease = _nativeHistoryRelease,
      sourceRead = _nativeSourceRead,
      queryViewport = _nativeQueryViewport,
      continuationNext = _nativeContinuationNext,
      continuationRelease = _nativeContinuationRelease,
      closeBegin = _nativeCloseBegin,
      closePump = _nativeClosePump,
      closeFinish = _nativeCloseFinish,
      createAbort = _nativeCreateAbort,
      anchorCreate = _nativeAnchorCreate,
      anchorTransform = _nativeAnchorTransform,
      anchorResolve = _nativeAnchorResolve,
      anchorRelease = _nativeAnchorRelease,
      cancel = _nativeCancel,
      sessionTransferOwner = _nativeSessionTransferOwner,
      sessionInspect = _nativeSessionInspect;

  FlarkV4Bindings(DynamicLibrary library)
    : negotiate = library.lookupFunction<_NegotiateNative, NegotiateDart>(
        'flark_v4_negotiate',
      ),
      createBegin = library.lookupFunction<_CreateBeginNative, CreateBeginDart>(
        'flark_v4_create_begin',
      ),
      createAppend = library
          .lookupFunction<_CreateAppendNative, CreateAppendDart>(
            'flark_v4_create_append',
          ),
      createCommit = library
          .lookupFunction<_CreateCommitNative, CreateCommitDart>(
            'flark_v4_create_commit',
          ),
      pump = library.lookupFunction<_PumpNative, PumpDart>('flark_v4_pump'),
      smallEdit = library.lookupFunction<_SmallEditNative, SmallEditDart>(
        'flark_v4_small_edit',
      ),
      editIntentV1 = library
          .lookupFunction<_EditIntentV1Native, EditIntentV1Dart>(
            'flark_v4_edit_intent_v1',
          ),
      sourceTransactionV1 = library
          .lookupFunction<_SourceTransactionV1Native, SourceTransactionV1Dart>(
            'flark_v4_source_transaction_v1',
          ),
      stagedSourceTransactionV1 = library
          .lookupFunction<
            _StagedSourceTransactionV1Native,
            StagedSourceTransactionV1Dart
          >('flark_v4_staged_source_transaction_v1'),
      bulkBegin = library.lookupFunction<_BulkBeginNative, BulkBeginDart>(
        'flark_v4_bulk_begin',
      ),
      bulkAppend = library.lookupFunction<_BulkAppendNative, BulkAppendDart>(
        'flark_v4_bulk_append',
      ),
      bulkCommit = library
          .lookupFunction<_BulkTransactionNative, BulkTransactionDart>(
            'flark_v4_bulk_commit',
          ),
      bulkAbort = library
          .lookupFunction<_BulkTransactionNative, BulkTransactionDart>(
            'flark_v4_bulk_abort',
          ),
      coordinateConvert = library
          .lookupFunction<_CoordinateConvertNative, CoordinateConvertDart>(
            'flark_v4_coordinate_convert',
          ),
      historyReplay = library.lookupFunction<_HistoryNative, HistoryDart>(
        'flark_v4_history_replay',
      ),
      historyRelease = library.lookupFunction<_HistoryNative, HistoryDart>(
        'flark_v4_history_release',
      ),
      sourceRead = library.lookupFunction<_SourceReadNative, SourceReadDart>(
        'flark_v4_source_read',
      ),
      queryViewport = library
          .lookupFunction<_QueryViewportNative, QueryViewportDart>(
            'flark_v4_query_viewport',
          ),
      continuationNext = library
          .lookupFunction<_ContinuationNextNative, ContinuationNextDart>(
            'flark_v4_continuation_next',
          ),
      continuationRelease = library
          .lookupFunction<_ContinuationReleaseNative, ContinuationReleaseDart>(
            'flark_v4_continuation_release',
          ),
      closeBegin = library.lookupFunction<_CloseNative, CloseDart>(
        'flark_v4_close_begin',
      ),
      closePump = library.lookupFunction<_CloseNative, CloseDart>(
        'flark_v4_close_pump',
      ),
      closeFinish = library.lookupFunction<_CloseNative, CloseDart>(
        'flark_v4_close_finish',
      ),
      createAbort = library
          .lookupFunction<_CreateCommitNative, CreateCommitDart>(
            'flark_v4_create_abort',
          ),
      anchorCreate = library.lookupFunction<_AnchorNative, AnchorDart>(
        'flark_v4_anchor_create',
      ),
      anchorTransform = library.lookupFunction<_AnchorNative, AnchorDart>(
        'flark_v4_anchor_transform',
      ),
      anchorResolve = library.lookupFunction<_AnchorNative, AnchorDart>(
        'flark_v4_anchor_resolve',
      ),
      anchorRelease = library.lookupFunction<_AnchorNative, AnchorDart>(
        'flark_v4_anchor_release',
      ),
      cancel = library.lookupFunction<_CancelNative, CancelDart>(
        'flark_v4_cancel',
      ),
      sessionTransferOwner = library
          .lookupFunction<_OwnerTransferNative, OwnerTransferDart>(
            'flark_v4_session_transfer_owner',
          ),
      sessionInspect = library
          .lookupFunction<_SessionInspectNative, SessionInspectDart>(
            'flark_v4_session_inspect',
          );

  final NegotiateDart negotiate;
  final CreateBeginDart createBegin;
  final CreateAppendDart createAppend;
  final CreateCommitDart createCommit;
  final PumpDart pump;
  final SmallEditDart smallEdit;
  final EditIntentV1Dart editIntentV1;
  final SourceTransactionV1Dart sourceTransactionV1;
  final StagedSourceTransactionV1Dart stagedSourceTransactionV1;
  final BulkBeginDart bulkBegin;
  final BulkAppendDart bulkAppend;
  final BulkTransactionDart bulkCommit;
  final BulkTransactionDart bulkAbort;
  final CoordinateConvertDart coordinateConvert;
  final HistoryDart historyReplay;
  final HistoryDart historyRelease;
  final SourceReadDart sourceRead;
  final QueryViewportDart queryViewport;
  final ContinuationNextDart continuationNext;
  final ContinuationReleaseDart continuationRelease;
  final CloseDart closeBegin;
  final CloseDart closePump;
  final CloseDart closeFinish;
  final CreateCommitDart createAbort;
  final AnchorDart anchorCreate;
  final AnchorDart anchorTransform;
  final AnchorDart anchorResolve;
  final AnchorDart anchorRelease;
  final CancelDart cancel;
  final OwnerTransferDart sessionTransferOwner;
  final SessionInspectDart sessionInspect;
}

@Native<_NegotiateNative>(symbol: 'flark_v4_negotiate')
external int _nativeNegotiate(
  Pointer<FlarkV4NegotiateRequest> request,
  Pointer<FlarkV4AbiInfo> info,
  Pointer<FlarkV4Outcome> outcome,
);

@Native<_CreateBeginNative>(symbol: 'flark_v4_create_begin')
external int _nativeCreateBegin(
  Pointer<FlarkV4CreateRequest> request,
  Pointer<Uint8> source,
  int sourceLength,
  Pointer<FlarkV4Outcome> outcome,
);

@Native<_CreateAppendNative>(symbol: 'flark_v4_create_append')
external int _nativeCreateAppend(
  Pointer<FlarkV4StageRequest> request,
  Pointer<Uint8> source,
  int sourceLength,
  Pointer<FlarkV4Outcome> outcome,
);

@Native<_CreateCommitNative>(symbol: 'flark_v4_create_commit')
external int _nativeCreateCommit(
  Pointer<FlarkV4TransactionRequest> request,
  Pointer<FlarkV4Outcome> outcome,
);

@Native<_PumpNative>(symbol: 'flark_v4_pump')
external int _nativePump(
  Pointer<FlarkV4PumpRequest> request,
  Pointer<FlarkV4Outcome> outcome,
);

@Native<_SmallEditNative>(symbol: 'flark_v4_small_edit')
external int _nativeSmallEdit(
  Pointer<FlarkV4SmallEditRequest> request,
  Pointer<FlarkV4EditDescriptor> edits,
  int editCount,
  Pointer<Uint8> replacement,
  int replacementLength,
  Pointer<FlarkV4Outcome> outcome,
);

@Native<_EditIntentV1Native>(symbol: 'flark_v4_edit_intent_v1')
external int _nativeEditIntentV1(
  Pointer<FlarkV4EditIntentRequestV1> request,
  Pointer<Uint8> result,
  int resultLength,
  Pointer<FlarkV4Outcome> outcome,
);

@Native<_SourceTransactionV1Native>(symbol: 'flark_v4_source_transaction_v1')
external int _nativeSourceTransactionV1(
  Pointer<FlarkV4SourceTransactionRequestV1> request,
  Pointer<Uint8> replacement,
  int replacementLength,
  Pointer<Uint8> result,
  int resultLength,
  Pointer<FlarkV4Outcome> outcome,
);

@Native<_StagedSourceTransactionV1Native>(
  symbol: 'flark_v4_staged_source_transaction_v1',
)
external int _nativeStagedSourceTransactionV1(
  Pointer<FlarkV4StagedSourceTransactionRequestV1> request,
  Pointer<Uint8> result,
  int resultLength,
  Pointer<FlarkV4Outcome> outcome,
);

@Native<_BulkBeginNative>(symbol: 'flark_v4_bulk_begin')
external int _nativeBulkBegin(
  Pointer<FlarkV4BulkBeginRequest> request,
  Pointer<FlarkV4Outcome> outcome,
);

@Native<_BulkAppendNative>(symbol: 'flark_v4_bulk_append')
external int _nativeBulkAppend(
  Pointer<FlarkV4StageRequest> request,
  Pointer<Uint8> source,
  int sourceLength,
  Pointer<FlarkV4Outcome> outcome,
);

@Native<_BulkTransactionNative>(symbol: 'flark_v4_bulk_commit')
external int _nativeBulkCommit(
  Pointer<FlarkV4TransactionRequest> request,
  Pointer<FlarkV4Outcome> outcome,
);

@Native<_BulkTransactionNative>(symbol: 'flark_v4_bulk_abort')
external int _nativeBulkAbort(
  Pointer<FlarkV4TransactionRequest> request,
  Pointer<FlarkV4Outcome> outcome,
);

@Native<_CoordinateConvertNative>(symbol: 'flark_v4_coordinate_convert')
external int _nativeCoordinateConvert(
  Pointer<FlarkV4CoordinateRequest> request,
  Pointer<FlarkV4Outcome> outcome,
);

@Native<_HistoryNative>(symbol: 'flark_v4_history_replay')
external int _nativeHistoryReplay(
  Pointer<FlarkV4HistoryRequest> request,
  Pointer<FlarkV4Outcome> outcome,
);

@Native<_HistoryNative>(symbol: 'flark_v4_history_release')
external int _nativeHistoryRelease(
  Pointer<FlarkV4HistoryRequest> request,
  Pointer<FlarkV4Outcome> outcome,
);

@Native<_SourceReadNative>(symbol: 'flark_v4_source_read')
external int _nativeSourceRead(
  Pointer<FlarkV4SourceReadRequest> request,
  Pointer<Uint8> result,
  int resultLength,
  Pointer<FlarkV4Outcome> outcome,
);

@Native<_QueryViewportNative>(symbol: 'flark_v4_query_viewport')
external int _nativeQueryViewport(
  Pointer<FlarkV4QueryRequest> request,
  Pointer<Uint8> result,
  int resultLength,
  Pointer<FlarkV4Outcome> outcome,
);

@Native<_ContinuationNextNative>(symbol: 'flark_v4_continuation_next')
external int _nativeContinuationNext(
  Pointer<FlarkV4ContinuationRequest> request,
  Pointer<Uint8> result,
  int resultLength,
  Pointer<FlarkV4Outcome> outcome,
);

@Native<_ContinuationReleaseNative>(symbol: 'flark_v4_continuation_release')
external int _nativeContinuationRelease(
  Pointer<FlarkV4ContinuationRequest> request,
  Pointer<FlarkV4Outcome> outcome,
);

@Native<_CloseNative>(symbol: 'flark_v4_close_begin')
external int _nativeCloseBegin(
  Pointer<FlarkV4CloseRequest> request,
  Pointer<FlarkV4Outcome> outcome,
);

@Native<_CloseNative>(symbol: 'flark_v4_close_pump')
external int _nativeClosePump(
  Pointer<FlarkV4CloseRequest> request,
  Pointer<FlarkV4Outcome> outcome,
);

@Native<_CloseNative>(symbol: 'flark_v4_close_finish')
external int _nativeCloseFinish(
  Pointer<FlarkV4CloseRequest> request,
  Pointer<FlarkV4Outcome> outcome,
);

@Native<_CreateCommitNative>(symbol: 'flark_v4_create_abort')
external int _nativeCreateAbort(
  Pointer<FlarkV4TransactionRequest> request,
  Pointer<FlarkV4Outcome> outcome,
);

@Native<_AnchorNative>(symbol: 'flark_v4_anchor_create')
external int _nativeAnchorCreate(
  Pointer<FlarkV4AnchorRequest> request,
  Pointer<FlarkV4Outcome> outcome,
);
